chore: updated response format and added reset password api
