# app/Http/Controllers/V1/UserController.php
@@ -6,6 +6,7 @@ use App\Domain\V1\User\Services\UserLoginService;
 use App\Domain\V1\User\Services\UserRegistrationService;
 use App\Enums\V1\HttpStatus;
 use App\Http\Controllers\Controller;
+use App\Http\Requests\PasswordResetRequest;
 use App\Http\Requests\UserLoginRequest;
 use App\Http\Requests\UserRegistrationRequest;
 use App\Traits\ResponseTrait;
@@ -19,6 +20,7 @@ class UserController extends Controller
      *     version="1.0.0",
      *     description="API for user registration and login"
      * )
+     *
      * @OA\SecurityScheme(
      *     securityScheme="BearerAuth",
      *     type="http",
@@ -87,7 +89,7 @@ class UserController extends Controller
         try {
             return $this->handleResponse($this->userRegistrationService->execute($request->validated()));
         } catch (\Throwable $th) {
-            return $this->apiFailedResponse(HttpStatus::BAD_REQUEST, HttpStatus::FAILED_REQUEST, $th->getMessage());
+            return $this->apiFailedResponse(HttpStatus::INTERNAL_ERROR, $th->getMessage());
         }
     }
 
@@ -144,7 +146,7 @@ class UserController extends Controller
         try {
             return $this->handleResponse($this->userLoginService->authenticate($request->validated()));
         } catch (\Throwable $th) {
-            return $this->apiFailedResponse(HttpStatus::BAD_REQUEST, HttpStatus::FAILED_REQUEST, $th->getMessage());
+            return $this->apiFailedResponse(HttpStatus::INTERNAL_ERROR, $th->getMessage());
         }
     }
 
@@ -157,7 +159,7 @@ class UserController extends Controller
      *     description="Logs out a user",
      *     tags={"User"},
      *     security={{"BearerAuth": {}}},
-     * 
+     *
      *     @OA\Response(
      *         response=200,
      *         description="User logged out successfully",
@@ -169,7 +171,61 @@ class UserController extends Controller
         try {
             return $this->handleResponse($this->userLoginService->logout());
         } catch (\Throwable $th) {
-            return $this->apiFailedResponse(HttpStatus::BAD_REQUEST, HttpStatus::FAILED_REQUEST, $th->getMessage());
+            return $this->apiFailedResponse(HttpStatus::INTERNAL_ERROR, $th->getMessage());
+        }
+    }
+
+    /**
+     * Resets a user's password.
+     *
+     * @OA\Patch(
+     *     path="/api/v1/reset-password",
+     *     summary="Resets a user's password",
+     *     description="Resets a user's password",
+     *     tags={"User"},
+     *     security={{"BearerAuth": {}}},
+     *
+     *     @OA\RequestBody(
+     *         description="User reset password details",
+     *         required=true,
+     *
+     *         @OA\JsonContent(
+     *             type="object",
+     *             required={"old_password", "new_password"},
+     *
+     *             @OA\Property(property="old_password", type="string", example="oldPassword123"),
+     *             @OA\Property(property="new_password", type="string", example="newPassword123"),
+     *         ),
+     *     ),
+     *
+     *  @OA\Response(
+     *         response=200,
+     *         description="Password reset successfully",
+     *     ),
+     *  @OA\Response(
+     *         response=422,
+     *         description="Validation error",
+     *
+     *         @OA\JsonContent(
+     *             type="object",
+     *
+     *             @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *             @OA\Property(
+     *                 property="errors",
+     *                 type="object",
+     *                 @OA\Property(property="old_password", type="array", @OA\Items(type="string", example="The old password field is required.")),
+     *                     @OA\Property(property="new_password", type="array", @OA\Items(type="string", example="The new password field is required."))
+     *                 )
+     *             ),
+     *         ),
+     * )
+     */
+    public function resetPassword(PasswordResetRequest $request): JsonResponse
+    {
+        try {
+            return $this->handleResponse($this->userLoginService->resetPassword($request->validated()));
+        } catch (\Throwable $th) {
+            return $this->apiFailedResponse(HttpStatus::INTERNAL_ERROR, $th->getMessage());
         }
     }
 }
